<resources>
    <string name="app_name">HnHApp</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>
    <string name="error_sign_in">Поле заполнено не верно</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="til_hint_input">Введите</string>
    <string name="bt_lesson4_name">Сохранить</string>
    <string name="wrong">Что то пошло не так</string>
    <string name="preview_title_product">Nike Tampa Bay Buccaneers Super Bowl LV</string>
    <string name="preview_department">Джерси</string>
    <string name="preview_price">9 000 P</string>
    <string name="bt_buy">Купить</string>
    <string name="error_header">Произошла непредвиденная ошибка</string>
    <string name="preview_error_message">Детальный текст ошибки, занимающий несколько строк</string>
    <string name="button_error_update">обновить</string>
    <string name="empty_list_header">Товары не были обнаружены</string>
    <string name="empty_list_message">Попробуйте обновить, вдруг товары появились</string>
    <string name="toolbar_catalog">Каталог</string>
    <string name="account">Аккаунт</string>
    <string name="best_seller">Хит сезона</string>
    <string name="buy_now">Купить сейчас</string>
    <string name="size">Размер</string>
    <string name="request_perm_title">Отправка уведомлений</string>
    <string name="request_perm_body">Вы сможете получать уведомления</string>
    <string name="request_perm_negative">Нет</string>
    <string name="request_perm_positive">Да</string>
    <string name="request_location_perm_title">Данные о вашей локации</string>
    <string name="request_location_perm_body">Мы используем ваши данные только для отображения на карте</string>
    <string name="enter_house">Выбор дома</string>
    <string name="enter_choice">Выбрать</string>
    <string name="order_house_tint_text">Дом</string>
    <string name="order_aparts_tint_text">Квартира</string>
    <string name="order_date_tint_text">Дата доставки</string>
    <string name="order_toolbar_title">Оформление заказа</string>
    <string name="success_order">Заказ №%1$d от %2$s был успешно оформлен</string>
    <string name="try_again">Попробовать еще раз</string>
    <string name="success_order_button_text">Успешный заказ</string>
    <string name="order_pattern">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="snackbar_pattern">dd.MM.YY</string>
    <string name="settings_firstname_field_tint_text">Имя</string>
    <string name="settings_lastname_field_tint_text">Фамилия</string>
    <string name="settings_occupation_filed_tint_text">Род деятельности</string>
    <string name="settings_other_occupation_field_tint_text">Другой род деятельности</string>
    <string name="settings_button_text">изменить</string>

</resources>