<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lesson4Fragment.Lesson4Fragment"
    android:layout_marginStart="@dimen/normal_100"
    android:layout_marginEnd="@dimen/normal_100">

    <TextView
        android:id="@+id/tv_lesson4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/hello_blank_fragment"
        android:textSize="@dimen/text_field"

        app:layout_constraintVertical_chainStyle="packed"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_lesson4"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lesson4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/til_hint_input"
        android:layout_marginTop="@dimen/normal_200"

        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintTop_toBottomOf="@+id/tv_lesson4"
        app:layout_constraintBottom_toTopOf="@id/bt_lesson4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lesson4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_lesson4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_lesson4_name"
        android:layout_marginTop="@dimen/normal_300"

        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_lesson4"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>